-- =====================================================================
--  Gestion des missions et du parc informatique — Schéma PostgreSQL
--  Dérivé du modèle de données validé (voir Modele-de-donnees.mermaid)
--  SGBD cible : PostgreSQL 12+
-- =====================================================================

-- ============================= RÉFÉRENTIELS ==========================

CREATE TABLE categorie_cable (
    id      INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    libelle VARCHAR(50) NOT NULL UNIQUE          -- Cat5e, Cat6, Cat6a, Cat7...
);

CREATE TABLE logiciel (
    id    INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nom   VARCHAR(80) NOT NULL UNIQUE,           -- Aster, Antivirus, SicCDD, CIC, Sysbudget...
    actif BOOLEAN NOT NULL DEFAULT TRUE          -- référentiel extensible
);

-- ============================= ORGANISATION ==========================

CREATE TABLE poste (
    id     INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code   VARCHAR(20) NOT NULL UNIQUE,          -- code poste (ex. DKR)
    nom    VARCHAR(120) NOT NULL,
    region VARCHAR(120)
);

CREATE TABLE agent (
    matricule   VARCHAR(30) PRIMARY KEY,         -- clé d'identité de l'agent
    nom         VARCHAR(80)  NOT NULL,
    prenom      VARCHAR(80)  NOT NULL,
    fonction    VARCHAR(120),
    telephone   VARCHAR(40),
    email       VARCHAR(160),
    type_agent  VARCHAR(15)  NOT NULL
        CHECK (type_agent IN ('POSTE', 'INFORMATICIEN')),
    poste_id    INTEGER REFERENCES poste(id),    -- renseigné pour les agents de poste
    -- un agent de poste est rattaché à un poste ; un informaticien ne l'est pas
    CONSTRAINT chk_agent_rattachement CHECK (
        (type_agent = 'POSTE'         AND poste_id IS NOT NULL) OR
        (type_agent = 'INFORMATICIEN' AND poste_id IS NULL)
    )
);

-- Historisation du chef de poste (un chef par poste sur une période)
CREATE TABLE chef_poste (
    id              INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    poste_id        INTEGER NOT NULL REFERENCES poste(id),
    agent_matricule VARCHAR(30) NOT NULL REFERENCES agent(matricule),
    date_debut      DATE NOT NULL,
    date_fin        DATE,                         -- NULL = chef en cours
    CONSTRAINT chk_chef_poste_periode CHECK (date_fin IS NULL OR date_fin >= date_debut)
);
-- Un seul chef de poste « en cours » par poste
CREATE UNIQUE INDEX uq_chef_poste_courant ON chef_poste(poste_id) WHERE date_fin IS NULL;

-- ============================== MISSIONS =============================

CREATE TABLE mission (
    id                         INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    reference                  VARCHAR(40) NOT NULL UNIQUE,   -- N° de mission (estampillé sur les canevas)
    objet                      VARCHAR(255) NOT NULL,
    date_debut                 DATE NOT NULL,
    date_fin                   DATE,
    poste_id                   INTEGER NOT NULL REFERENCES poste(id),
    chef_mission_matricule     VARCHAR(30) NOT NULL REFERENCES agent(matricule),   -- informaticien (contrôlé par l'app)
    chef_poste_fige_matricule  VARCHAR(30) NOT NULL REFERENCES agent(matricule),   -- chef de poste figé au moment de la mission
    etat_cablage               TEXT,                          -- relevé réseau (une fois par mission)
    categorie_cable_id         INTEGER REFERENCES categorie_cable(id),
    statut                     VARCHAR(20) NOT NULL DEFAULT 'EN_CONSOLIDATION'
        CHECK (statut IN ('EN_CONSOLIDATION', 'CLOTUREE')),
    CONSTRAINT chk_mission_periode CHECK (date_fin IS NULL OR date_fin >= date_debut)
);

-- Membres de la mission (informaticiens) — relation N:N
CREATE TABLE mission_membre (
    mission_id      INTEGER NOT NULL REFERENCES mission(id) ON DELETE CASCADE,
    agent_matricule VARCHAR(30) NOT NULL REFERENCES agent(matricule),
    PRIMARY KEY (mission_id, agent_matricule)
);

-- ============================== MATÉRIEL =============================
-- Supertype commun + sous-types (héritage par table)

CREATE TABLE materiel (
    numero_inventaire VARCHAR(40) PRIMARY KEY,    -- clé d'identité, générée par l'application
    type              VARCHAR(20) NOT NULL
        CHECK (type IN ('ORDINATEUR', 'IMPRIMANTE', 'SWITCH', 'ACCESS_POINT', 'SCANNER_CHEQUE', 'AUTRE')),
    nom               VARCHAR(120),
    modele            VARCHAR(120),
    poste_id          INTEGER REFERENCES poste(id),   -- poste de rattachement courant (historisé dans affectation_materiel)
    date_creation     TIMESTAMP NOT NULL DEFAULT now()
);

CREATE TABLE ordinateur (
    numero_inventaire             VARCHAR(40) PRIMARY KEY
        REFERENCES materiel(numero_inventaire) ON DELETE CASCADE,
    mac_ethernet                  VARCHAR(17) UNIQUE,   -- AA:BB:CC:DD:EE:FF
    mac_wifi                      VARCHAR(17),
    nom_machine                   VARCHAR(120),
    agent_installateur_matricule  VARCHAR(30) REFERENCES agent(matricule)   -- informaticien
);

CREATE TABLE imprimante (
    numero_inventaire VARCHAR(40) PRIMARY KEY
        REFERENCES materiel(numero_inventaire) ON DELETE CASCADE,
    mac      VARCHAR(17) UNIQUE,
    mac_wifi VARCHAR(17),
    ip       VARCHAR(45)
);

-- Switch ET access point (attributs identiques ; le type est porté par materiel.type)
CREATE TABLE equipement_reseau (
    numero_inventaire VARCHAR(40) PRIMARY KEY
        REFERENCES materiel(numero_inventaire) ON DELETE CASCADE,
    mac VARCHAR(17) UNIQUE,
    ip  VARCHAR(45)
);

CREATE TABLE scanner_cheque (
    numero_inventaire VARCHAR(40) PRIMARY KEY
        REFERENCES materiel(numero_inventaire) ON DELETE CASCADE,
    numero_serie VARCHAR(80) UNIQUE,   -- clé d'identification physique (pas de MAC)
    marque       VARCHAR(80)
);

-- Logiciels installés par ordinateur — relation N:N
CREATE TABLE ordinateur_logiciel (
    ordinateur_numero VARCHAR(40) NOT NULL
        REFERENCES ordinateur(numero_inventaire) ON DELETE CASCADE,
    logiciel_id       INTEGER NOT NULL REFERENCES logiciel(id),
    PRIMARY KEY (ordinateur_numero, logiciel_id)
);

-- Historisation des affectations (matériel ↔ agent et/ou poste, dans le temps)
CREATE TABLE affectation_materiel (
    id              INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    materiel_numero VARCHAR(40) NOT NULL REFERENCES materiel(numero_inventaire),
    agent_matricule VARCHAR(30) REFERENCES agent(matricule),   -- attributaire (surtout ordinateurs)
    poste_id        INTEGER REFERENCES poste(id),              -- localisation
    date_debut      DATE NOT NULL,
    date_fin        DATE,                                       -- NULL = affectation en cours
    CONSTRAINT chk_affectation_periode CHECK (date_fin IS NULL OR date_fin >= date_debut)
);
-- Une seule affectation « en cours » par matériel
CREATE UNIQUE INDEX uq_affectation_courante ON affectation_materiel(materiel_numero) WHERE date_fin IS NULL;

-- ====================== RELEVÉS DE MISSION (PHOTO DATÉE) =============
-- Inventaire constaté pendant une mission ; base des restitutions à une date

CREATE TABLE releve_materiel (
    id                          INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    mission_id                  INTEGER NOT NULL REFERENCES mission(id) ON DELETE CASCADE,
    materiel_numero             VARCHAR(40) NOT NULL REFERENCES materiel(numero_inventaire),
    agent_saisisseur_matricule  VARCHAR(30) REFERENCES agent(matricule),  -- qui a relevé cette ligne
    zone                        VARCHAR(120),                              -- périmètre couvert (optionnel)
    source_fichier              VARCHAR(255),                              -- canevas Excel d'origine (traçabilité)
    date_releve                 DATE NOT NULL DEFAULT CURRENT_DATE,
    etat_observe                JSONB,                                     -- snapshot des attributs observés (photo)
    CONSTRAINT uq_releve_mission_materiel UNIQUE (mission_id, materiel_numero)  -- 1 ligne / matériel / mission
);

-- ============================== INDEX ================================

CREATE INDEX idx_agent_poste            ON agent(poste_id);
CREATE INDEX idx_agent_type             ON agent(type_agent);
CREATE INDEX idx_chef_poste_poste       ON chef_poste(poste_id);
CREATE INDEX idx_mission_poste          ON mission(poste_id);
CREATE INDEX idx_mission_statut         ON mission(statut);
CREATE INDEX idx_materiel_poste         ON materiel(poste_id);
CREATE INDEX idx_materiel_type          ON materiel(type);
CREATE INDEX idx_affectation_materiel   ON affectation_materiel(materiel_numero);
CREATE INDEX idx_affectation_agent      ON affectation_materiel(agent_matricule);
CREATE INDEX idx_releve_mission         ON releve_materiel(mission_id);
CREATE INDEX idx_releve_materiel        ON releve_materiel(materiel_numero);

-- ============================ COMMENTAIRES ===========================

COMMENT ON TABLE  materiel             IS 'Supertype du parc ; numero_inventaire généré par l''application.';
COMMENT ON TABLE  equipement_reseau    IS 'Switchs et access points (attributs identiques ; distinction via materiel.type).';
COMMENT ON TABLE  chef_poste           IS 'Historique des chefs de poste (date_fin NULL = en cours).';
COMMENT ON TABLE  affectation_materiel IS 'Historique des affectations matériel ↔ agent/poste.';
COMMENT ON TABLE  releve_materiel      IS 'Photo datée du parc constatée pendant une mission ; base des restitutions à une date.';
COMMENT ON COLUMN mission.reference                 IS 'N° de mission partagé par tous les fichiers du mode hors-ligne.';
COMMENT ON COLUMN mission.chef_poste_fige_matricule IS 'Chef de poste en fonction au moment de la mission (figé).';
COMMENT ON COLUMN releve_materiel.etat_observe      IS 'Snapshot JSON des attributs observés, pour reconstituer l''état exact à la date du relevé.';

-- Règles métier contrôlées par l'application (non exprimables en pur DDL) :
--  * chef_mission et membres = agents de type INFORMATICIEN ;
--  * chef_poste_fige = agent de type POSTE, chef du poste à la date de la mission ;
--  * à l'import : rapprochement par numero_inventaire, sinon MAC / numero_serie (anti-doublon).

-- ========================= SEED RÉFÉRENTIELS ========================

INSERT INTO categorie_cable (libelle) VALUES
    ('Cat5e'), ('Cat6'), ('Cat6a'), ('Cat7'), ('Autre');

INSERT INTO logiciel (nom) VALUES
    ('Aster'), ('Antivirus'), ('SicCDD'), ('CIC'), ('Sysbudget');
